# policy-aware-order-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_REPORT.md  Dockerfile  README.md  SOLUTION_DESIGN.md  demo.py  docker-compose.yml  evaluation.py  main.py  pyproject.toml  streamlit_app.py  test_api.py  test_chatbot.py  test_system.py
chatbot/: __init__.py  agents.py  order_service.py  policy_engine.py
evaluation_results/: evaluation_report_20250607_194226.md  evaluation_results_20250607_194226.json
